tests/baselines/reference/issue49938.errors.txt
tests/cases/compiler/issue49938.ts(12,15): error TS2345: Argument of type 'D | undefined' is not assignable to parameter of type 'B'.
  Type 'undefined' is not assignable to type 'B'.


==== tests/cases/compiler/issue49938.ts (1 errors) ====
    function equal<T>(a: T, b: T) { }
    
    let v = null!;
    
    // Object types with common base types
    
    type B = { foo: string }
    type D = { foo: string; bar: number }
    
    // Error in 4.8 TS can't find common type ❌
    // 4.7 T was undefined | B
    equal(v as B, v as undefined | D)
                  ~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type 'D | undefined' is not assignable to parameter of type 'B'.
!!! error TS2345:   Type 'undefined' is not assignable to type 'B'.
    
    // ok T is B ✅
    equal(v as B, v as D)
    // ok T is B | undefined ✅
    equal(v as B, v as B | undefined)
    